# CodingTest_CADITIoTCentre

./: CMakeLists.txt  README.md
include/: utility.hpp
result/: random_aggregation.json  salary_converted.json  sensor_aggregation.json
sensor_simulation/: CMakeLists.txt  main.cpp  simplesimulation.cpp  simplesimulation.h  simplesimulation.ui
src/: salary_conversion.cpp  sensor_aggregation.cpp  sensor_simulation.cpp  utility.cpp
test/: CMakeLists.txt  UtilityTest.cpp
